--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Blog</h1>
+        <h1>Rookie LZY</h1>
         <h2>All my life I have to fight</h2>
         <a href="https://github.com/rookielzy/blog" class="button"><small>View project on</small> GitHub</a>
       </div>
