--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <div class="inner">
         <h1>Rookie LZY</h1>
         <h2>All my life I have to fight</h2>
+        <h2>IFE Task 1</h2>
+        <a href=".\ife-task\task-1\1.html">零基础HTML编码</a>
         <a href="https://github.com/rookielzy/blog" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
