--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
       <div class="inner">
         <h1>Rookie LZY</h1>
         <h2>All my life I have to fight</h2>
-        <h2>IFE Task 1</h2>
-        <a href=".\ife-task\task-1\1.html">零基础HTML编码</a>
         <a href="https://github.com/rookielzy/blog" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -34,6 +32,8 @@
 <a id="blog" class="anchor" href="#blog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>blog</h1>
 
 <p>All my life I have to fight</p>
+<h2>IFE-Task 1</h2>
+<a href=".\ife-task\task-1\1.html">零基础HTML编码</a>
         </section>
 
         <aside id="sidebar">
