--- a/ife-task/task-1/1.html
+++ b/ife-task/task-1/1.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" />
+	<meta name="description" content="HTML,ife,baidu" />
 	<title>零基础HTML编码</title>
 </head>
 <body>
@@ -12,8 +13,8 @@
 		<li><a href="#third">导航链接三</a></li>
 		<li><a href="#fouth">导航链接四</a></li>
 	</ul>
-	<div id="first" name="first">
-		<h2>文章一级标题</h2>
+	<div id="first">
+		<h2><a name="first">文章一级标题</a></h2>
 		<h2>文章二级标题</h2>
 		<p>文章作者 文章发表时间</p>
 		<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落， <br />
@@ -95,7 +96,7 @@
 			<tfoot>
 				<tr>
 					<td>总计</td>
-					<td>1000</td>
+					<td colspan="2">1000</td>
 				</tr>
 			</tfoot>
 		</table>
