--- a/ife-task/task-1/1.html
+++ b/ife-task/task-1/1.html
@@ -17,10 +17,12 @@
 		<h2><a name="first">文章一级标题</a></h2>
 		<h2>文章二级标题</h2>
 		<p>文章作者 文章发表时间</p>
-		<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落， <br />
+		<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落, <br />
 		换行了,<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
 		这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段<br />落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
+		
 		<img src="img\we-code.jpg" alt="GitHub-We-Code"> <br />
+		
 		这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
 		<br />这是一个很长很长的段落，换行了<br />
 		这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，
@@ -33,9 +35,11 @@
 		<h2>文章二级标题</h2>
 		<p>文章作者 文章发表时间</p>
 		<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落， <br />
-			换行了,<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
-			这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段<br />落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
+		换行了,<br />这是一个很长很长的段落，这是一个很长很长的段落，这一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的落，这是一个很长很长的段落，换行了<br /
+		这是一个很长很长的段落，这是一个很长很的段落，<a href="http:/ife.baidu.com">这里有一个链接链接到http//ife.baidu.com</a这是一个很长很长的段落，这是一个很长很的段落，<b>这里有粗体</b>这是一个很长很长的段<br />落，这是一个很长很长的段落这是个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段，这是一个很长很长的段落，这是一个很长很长的段落。
+			
 			<img src="img\we-code.jpg" alt="GitHub-We-Code"> <br />
+			
 			<ul>
 				<li>列表项目一</li>
 				<li>列表项目二</li>
@@ -107,14 +111,14 @@
 	<form action="">
 		请输入邮箱地址: <input type="text" name="email" value="这是一个文本输入框"> <br /> <br />
 		邮箱地址请按要求格式输入 <br /><br />
-		请输入密码: <input type="text" name="email" value="这是一个文本输入框"> 请重复输入密码： <input type="text" name="email" value="这是一个文本输入框"> <br/ ><br />
+		请输入密码: <input type="text" name="email" value="这是一个文本输入框"> 请重复输入密码： <input type="text" name="email" placeholder="请重复输入密码"> <br/ ><br />
 		密码请为6-16位英文数字 <br /><br />
 
 		性别： <input type="radio" name="sex" value="man">男 <input type="radio" name="sex" value="woman">女 
 		爱好： <input type="checkbox" name="sport" value="sport">运动
 			   <input type="checkbox" name="art" value="art">艺术
 			   <input type="checkbox" name="science" value="science">科学
-		个人描述： <textarea name="personal" cols="20" rows="2">这是一个多行输入框，输入您的个人描述</textarea>
+		个人描述： <textarea name="personal" cols="20" rows="2" placeholder="这是一个多行输入框，输入您的个人描述"></textarea>
 		<input type="submit" name="submit" value="确认提交">
 	</form> <br /><br />
 	
