--- a/ife-task/task-1/2.html
+++ b/ife-task/task-1/2.html
@@ -25,21 +25,21 @@
 		<h2 ><b><a name="em">Eminem</a></b></h2>
 		<h3>Slim Shady</h3>
 		<p>
-			
+			Marshall Bruce Mathers III (born October 17, 1972),[1] known professionally as Eminem, is an American rapper, songwriter, record producer, and actor from Detroit, Michigan. In addition to his solo career, he is a member of D12 and (with Royce da 5'9") half of the hip-hop duo Bad Meets Evil. Eminem is the best-selling artist of the 2000s in the United States. Rolling Stone ranked him 83rd on its list of 100 Greatest Artists of All Time, calling him the King of Hip Hop. Including his work with D12 and Bad Meets Evil, Eminem has had ten number-one albums on the Billboard 200. He has sold more than 172 million albums, making him one of the world's best-selling artists. As of June 2014, Eminem is the second-bestselling male artist of the Nielsen SoundScan era, the sixth-bestselling artist in the United States and the bestselling hip-hop artist, with sales of 45.1 million albums and 42 million tracks (including 31 million digital single certifications).
 		</p>
 	</article>
 	<article class="idol">
 		<h2><b><a name="nas">Nas</a></b></h2>
 		<h3>Nastry Nas</h3>
 		<p>
-			
+			Nasir bin Olu Dara Jones[1] (/nɑːˈsɪər/; born September 14, 1973), better known as Nas /ˈnɑːz/, is an American rapper, songwriter, entrepreneur, record producer and actor. The son of jazz musician Olu Dara, Nas has released eight consecutive platinum and multi-platinum albums and sold over 25 million records worldwide since 1994. He is also an entrepreneur through his own record label; he serves as associate publisher of Mass Appeal magazine and is the owner of a Fila sneaker store. He is currently signed to Mass Appeal Records.
 		</p>
 	</article>
 	<article class="idol">
 		<h2><b><a name="kdot">Kendrick Lamar</a></b></h2>
 		<h3>K.Dot</h3>
 		<p>
-			
+			Kendrick Lamar Duckworth (born June 17, 1987) is an American rapper from Compton, California. Lamar embarked on his musical career as a teenager under the moniker K-Dot, releasing a mixtape that garnered local attention and led to his signing with Carson-based independent record label Top Dawg Entertainment (TDE). Lamar began to gain major recognition in 2010 after his first retail release, Overly Dedicated. The following year, he released the independent album Section.80, which included Lamar's debut single, "HiiiPoWeR". By that time, he had collaborated with several prominent artists in the hip hop industry, including The Game, Snoop Dogg, and Busta Rhymes.
 		</p>
 	</article>
 
