--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <p>All my life I have to fight</p>
 <h2>IFE-Task 1</h2>
 <a href=".\ife-task\task-1\1.html">零基础HTML编码</a>
+<a href=".\ife-task\task-1\2.html">零基础HTML及CSS编码（一）</a>
         </section>
 
         <aside id="sidebar">
