--- a/IFE-Task/task-1.html
+++ b/IFE-Task/task-1.html
@@ -2,24 +2,25 @@
 <html>
     <head>
         <title>Task-1</title>
+        <meta charset="UTF-8" />
     </head>
     <body>
-        <div>
+        <header>
             <h1>Tag One</h1>
-            <div>
+            <nav>
                 <ul>
                     <li>guide-1</li>
                     <li>guide-2</li>
                     <li>guide-3</li>
                     <li>guide-4</li>
                 </ul>
-            </div>
-        </div>
+            </nav>
+        </header>
 
-        <div>
+        <article>
             <h2>Tag Two</h2>
             <h2>Tag Two</h2>
-            <p>Author&nbspTimeLine</p>
+            <span>Author&nbspTimeLine</span>
             <p>Long Long Long Long Long Long Long Long Long <br />Long Long Long Long Long Long Long <br />Long Long <a href="bing.com">Bing</a></p>
             <img src="../images/v.jpg" alt="" />
             <div>
@@ -29,20 +30,20 @@
                     <li>3</li>
                 </ul>
             </div>
-        </div>
+        </article>
 
         <div>
             <h2>Pic</h2>
             <div>
-                <p>pic</p>
+                <span>pic</span>
                 <img src="../images/v.jpg" alt="" />
             </div>
             <div>
-                <p>pic</p>
+                <span>pic</span>
                 <img src="../images/v.jpg" alt="" />
             </div>
             <div>
-                <p>pic</p>
+                <span>pic</span>
                 <img src="../images/v.jpg" alt="" />
             </div>
         </div>
@@ -50,7 +51,7 @@
         <div>
             <h1>The Last</h1>    
             <h2>Tag Two</h2>
-            <p>Author&nbspTime Line</p>
+            <span>Author&nbspTime Line</span>
             <div>
                 <ul>
                     <li>1</li>
@@ -60,7 +61,7 @@
             </div>
 
             <div>
-                <p>A table</p>
+                <span>A table</span>
                 <table border="1">
                     <tr>
                         <th>head</th>
@@ -96,7 +97,7 @@
                 </table>
             </div>
 
-            <div>
+            <aside>
                 <h1>Side</h1>
                 <h1>Register</h1>
                 <form action="">
@@ -108,7 +109,7 @@
                     <label>Sex: <input type="radio" checked="checked" name="Sex" value="male">Man</label>
                     <label>Sex: <input type="radio" name="Sex" value="female">Woman</label>
                 </form>
-            </div>
+            </aside>
 
             <div class="footer">
                 CopyRight - RookieLzy
