--- a/IFE-Task/task-1-6.html
+++ b/IFE-Task/task-1-6.html
@@ -25,6 +25,23 @@
                     <p>3.2<span>CSS</span></p>
                 </div>
             </div>
+            <article class="article1">
+                <div id="what">
+                    <h4>What</h4>
+                    <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+                </div>
+                <div id="when">
+                    <h4>When</h4>
+                    <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>                        
+                </div>
+                <div id="how">
+                    <h4>How</h4>
+                    <p>前端前端前端前端前端前端前端前端前端前端前端前端</p>
+                    <p>What--------<span>40%</span></p>
+                    <p>When--------<span>30%</span></p>
+                    <p>How --------<span>30%</span></p>                    
+                </div>
+            </article>
          </div>
     </body>
 </html>
