--- a/IFE-Task/task-2-1.html
+++ b/IFE-Task/task-2-1.html
@@ -21,8 +21,11 @@
   获取aqi-input输入的值，并显示在aqi-display中
   */
   var button = document.getElementById("button");
+  var input = document.getElementById("aqi-input");
+  var display = document.getElementById("aqi-display");
   button.onclick = function() {
-    
+    var data = input.value;
+    display.innerHTML = data;
   }
 })();
 
