--- a/IFE-Task/task-2-2.html
+++ b/IFE-Task/task-2-2.html
@@ -34,11 +34,18 @@ var aqiData = [
   var num = ["一","二","三","四","五","六","七","八","九"];
   var list = document.getElementById("aqi-list"),
       length = aqiData.length;
-  for (var j = 0; j < length; j++){
-      var newli = document.createElement("li");
-      newli.innerHTML = ("第" + num[j] + "名:" + aqiData[j].toString());
-      list.appendChild(newli);
-  }
+//   for (var j = 0; j < length; j++){
+//       var newli = document.createElement("li");
+//       newli.innerHTML = ("第" + num[j] + "名:" + aqiData[j].toString());
+//       list.appendChild(newli);
+  var content = "";
+  aqiData.filter(function(value){return value[1] > 60;})
+         .sort(function(d1, d2){return d2[1] - d1[1];})
+         .forEach(function(element, index){
+      content += ("<li>第" + num[index] + "名:" + element.toString() + "</li>");
+  });
+  list.innerHTML = content;
+  
 })();
 
 </script>
