--- a/IFE-Task/task-1-7.html
+++ b/IFE-Task/task-1-7.html
@@ -25,7 +25,25 @@
             <div class="content">
                 <h1>Time of new life</h1>
                 <p>新时代，年轻的人们让我们一起<br>体验新生活，享受新生活</p>
-                <button type="button">开始体验</button>
+                <a href="#"><button type="button">开始体验</button></a>
+            </div>
+        </section>
+        <section>
+            <div class="content-side">
+                <img src="../images/icon1.gif" alt="">
+                <p>打造全新世界观，让你更爱你的生活</p>
+            </div>
+            <div class="content-side">
+                <img src="../images/icon2.gif" alt="">
+                <p>丰富多彩的公益活动，发挥新世界的主人公意识</p>
+            </div>
+            <div class="content-side">
+                <img src="../images/icon3.gif" alt="">
+                <p>时尚的新理念，超前体验未知的生活</p>
+            </div>
+            <div class="content-side">
+                <img src="../images/icon4.gif" alt="">
+                <p>完善的培养机制，培养你全新的世界观</p>
             </div>
         </section>
     </body>
