--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a id="blog" class="anchor" href="#blog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>blog</h1>
-
-<p>All my life I have to fight</p>
-
+          <h1><a id="blog" class="anchor" href="#blog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>blog</h1>
+          <p>All my life I have to fight</p>
+          <h2>IFE Task</h2>
+          <a href="https://github.com/rookielzy/blog/blob/gh-pages/IFE-Task/task-2-3.html">test</a>
         </section>
       </div>
     </div>
