新增前端项目小练习（主要为 JavaScript）

--- a/IFE-Task/task-1-7.html
+++ b/IFE-Task/task-1-7.html
@@ -28,7 +28,7 @@
                 <a href="#"><button type="button">开始体验</button></a>
             </div>
         </section>
-        <section>
+        <section id="content-side">
             <div class="content-side">
                 <img src="../images/icon1.gif" alt="">
                 <p>打造全新世界观，让你更爱你的生活</p>
@@ -44,6 +44,32 @@
             <div class="content-side">
                 <img src="../images/icon4.gif" alt="">
                 <p>完善的培养机制，培养你全新的世界观</p>
+            </div>
+        </section>
+        <section id="about">
+            <div id="about1">
+                <img src="../images/icon5.gif" alt="">
+                <h1>关于新世界，你不知道的还有什么</h1>                
+            </div>
+        </section>
+        <section id="activity">
+            <div>
+                <h4>查找新世界城市活动信息</h4>
+                <p>每个城市都有不同的活动信息，请自主查询您所需要了解的城市</p>
+                <select name="country" class="select-group">
+                    <option value="china">中国</option>
+                    <option value="use">美国</option>
+                </select>
+                <select name="provice" class="select-group">
+                    <option disabled selected style="display:none">省份</option>
+                    <option value="bj">北京</option>
+                    <option value="gd">广东省</option>
+                    <option value="tj">天津市</option>
+                    <option value="hb">河北省</option>
+                </select>
+                <select name="city" class="select-group">
+                    <option disabled selected style="display:none">城市</option>
+                </select>
             </div>
         </section>
     </body>
