--- a/IFE-Task/task-2-5.html
+++ b/IFE-Task/task-2-5.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>IFE JavaScript Task 01</title>
-    <script src="task.js"></script>
   </head>
 <body>
   <fieldset id="form-gra-time">
@@ -22,5 +21,6 @@
 
   <div class="aqi-chart-wrap">
   </div>
+  <script src="js/task-2-5.js"></script>
 </body>
 </html>
