--- a/IFE-Task/task-2-6.html
+++ b/IFE-Task/task-2-6.html
@@ -18,9 +18,10 @@
                 width: 50px;
                 height: 50px;
                 line-height: 50px;
-                font-size: 32px;
+                font-size: 20px;
                 display: inline-block;
                 margin-left: 10px;
+                text-align: center;
             }
         </style>
     </head>
