--- a/FCC/Random_Quote_Machine.html
+++ b/FCC/Random_Quote_Machine.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/Random_Quote_Machine.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/bootstrap.min.css.map">
+        <link rel="stylesheet" href="css\bootstrap.min.css">
     </head>
     <body class="bgcolor">
         <main>
