--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <mian>
           <section id="self">
-            <img src="images\v.jpg" alt="" id="self-pic">
+            <img src="images\self-pic.jpg" alt="" id="self-pic">
             
           </section>
       </mian>
