finish static page Portfolio todo add js

--- a/FCC/Portfolio.html
+++ b/FCC/Portfolio.html
@@ -64,7 +64,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="intro-text text-center">
-                            <div class="col-xs-6 col-xs-offset-3 col-md-offset-1 col-md-3">
+                            <div class="col-xs-7 col-xs-offset-3 col-md-offset-1 col-md-3">
                                 <img src="images/self-pic.jpg" alt="self-pic" class="img-circle img-responsive self-pic">
                             </div>
                             <div class="col-md-4 col-md-offset-2">
@@ -82,6 +82,59 @@
                     </div>
                 </div>
                 <!--container-->
+            </div>
+        </div>
+        <!--Project Introduce-->
+        <div class="project">
+            <div class="bg-overlay">
+                <div class="container">
+                    <div class="row">
+                        <!--todo add link to project-->
+                        <div class="col-xs-8 col-xs-offset-2 col-md-3 col-md-offset-1">
+                            <img src="images/ife.png" alt="ife" class="project-pic img-responsive img-rounded">
+                        </div>
+                        <div class="col-xs-8 col-xs-offset-2 col-md-3 col-md-offset-1">
+                            <img src="images/weather.png" alt="weather" class="project-pic img-responsive img-rounded">
+                        </div>
+                        <div class="col-xs-8 col-xs-offset-2 col-md-3 col-md-offset-1">
+                            <img src="images/quote.png" alt="quote" class="project-pic img-responsive img-rounded">
+                        </div>
+                    </div>
+                </div>
+                <!--Container-->
+            </div>
+        </div>
+        <!--Contact-->
+        <div class="contact">
+            <div class="bg-overlay">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h1>Connect with Infinito Web Design Studio:<br/>
+                                136464242@qq.com
+                            </h1>
+                        </div>
+                        <div class="col-xs-7 col-xs-offset-4">
+                            <ul class="list-inline">
+                                <li>
+                                    <button type="button" class="btn btn-large btn-block btn-default"><i class="fa fa-github fa-fw"></i><span>Github</span></button>                                       
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-large btn-block btn-default"><i class="fa fa-qq fa-fw"></i><span>QQ</span></button>
+                                </li>
+                            </ul>  
+                         </div>                    
+                    </div>
+                </div>
+                <!--container-->
+            </div>
+        </div>
+        <!--Footer-->
+        <div class="footer">
+            <div class="container">
+                <footer>
+                    <h1>©CopyRight---rookielzy </h1>
+                </footer>
             </div>
         </div>
         <script src="javascripts\jquery-2.2.1.min.js"></script>
