--- a/index.html
+++ b/index.html
@@ -4,14 +4,72 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css"> 
     <link href="stylesheets/stylesheet.css" rel="stylesheet">
+    <link href="stylesheets/loading.css" rel="stylesheet">   
   </head>
   <body>
+    <!--loading-->
+    <div class="dna text-center">
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <div class="ele"></div>
+      <p>Click to Continue...</p>
+    </div>
+    <!--loading-->
+    <div class="main-page text-center">
+      <nav class="navbar navbar-default navbar-fixed-top topnav">
+        <div class="container">
+          <!--Brand and toggle get grouded for better mobile display-->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a href="#" class="navbar-brand">rookiezy</a>
+          </div>
+          <!--Collect the nav links-->
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <mian>
-          <section id="self">
-            <img src="images\self-pic.jpg" alt="" id="self-pic">
-            
-          </section>
+        <section id="self">
+          <img src="images\self-pic.jpg" alt="" id="self-pic">
+          <hr>
+          <p>Look, if you had one shot, or one opportunity
+            To seize everything you ever wanted, in one moment
+            Would you capture it or just let it slip?
+          </p>
+        </section>
       </mian>
+    </div>
+
+    <script src="javascripts/jquery-2.2.1.min.js"></script>
+    <script src="javascripts/loading.js"></script>
+    <script src="javascripts/main.js"></script>
   </body>
 </html>
