fixed responsive problem

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="ele"></div>
       <div class="ele"></div>
       <div class="ele"></div>
-      <p>Click to Continue...</p>
+      <p>Click to Entry...</p>
     </div>
     <!--loading-->
     <div class="main-page text-center">
@@ -64,7 +64,12 @@
             To seize everything you ever wanted, in one moment
             Would you capture it or just let it slip?
           </p>
+          <div id="fun">
+            <div class="spin"></div>
+            <div class="spin"></div>
+          </div>
         </section>
+
       </mian>
     </div>
 
