you should learn more

--- a/PractiseProject/HOOK/index.html
+++ b/PractiseProject/HOOK/index.html
@@ -39,6 +39,31 @@
                 <button type="button" id="allow"><span>></span></button>
             </div>
         </section>
+        <section class="about">
+            <div class="intro">
+                <h2>Our Projects & Visions</h2>
+                <h1>ABOUT OUR STUDIO</h1>
+            </div>
+            <article>
+                <img src="self-pic.jpg" alt="">
+                <div class="intro-msg">
+                    <h1>BRINGING IDEAS TO LIFE</h1>
+                    <hr>
+                    <p>test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test </p>
+                </div>
+            </article>
+            <hr>
+            <article>
+                <div class="intro-msg">
+                    <h1>WE ARE MULTIFACETED AND GIFTED</h1>
+                    <hr>
+                    <p>test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test </p>
+                </div>
+                <div class="skill-detail">
+                    <div class="branding"><div></div></div>
+                </div>
+            </article>
+        </section>
         <script src="main.js"></script>
     </body>
 </html>
