finish two part of HOOK

--- a/PractiseProject/HOOK/index.html
+++ b/PractiseProject/HOOK/index.html
@@ -61,9 +61,13 @@
                 </div>
                 <div class="skill-detail">
                     <div class="branding"><div></div></div>
+                    <div class="branding"><div></div></div>
+                    <div class="branding"><div></div></div>
+                    <div class="branding"><div></div></div>
                 </div>
             </article>
         </section>
+        
         <script src="main.js"></script>
     </body>
 </html>
