HOOK Part 3 finished

--- a/PractiseProject/HOOK/index.html
+++ b/PractiseProject/HOOK/index.html
@@ -67,7 +67,37 @@
                 </div>
             </article>
         </section>
-        
+        <section class="achievment">
+            <h1>LATEST ACHIEVMENTS</h1>
+            <p>The leading matter of it requires to be still further and
+                more familiarly enlarged upon.
+                <br/>
+                Moreover to take away any incredulity which a profound expertise
+            </p>
+            <!--todo add icon-->
+            <ul class="achi-detail">
+                <li>
+                    <span></span>
+                    <span>945</span>
+                    <span>TIMELY DELIVERIES</span>
+                </li>
+                <li>
+                    <span></span>
+                    <span>0</span>
+                    <span>UNSOLVED MISTERIES</span>
+                </li>
+                <li>
+                    <span></span>
+                    <span>980</span>
+                    <span>BIG HEARBEATS</span>
+                </li>
+                <li>
+                    <span></span>
+                    <span>876</span>
+                    <span>CLOUD WORKERS</span>
+                </li>
+            </ul>
+        </section>
         <script src="main.js"></script>
     </body>
 </html>
