HOOK part 4 finished

--- a/PractiseProject/HOOK/index.html
+++ b/PractiseProject/HOOK/index.html
@@ -41,7 +41,7 @@
         </section>
         <section class="about">
             <div class="intro">
-                <h2>Our Projects & Visions</h2>
+                <span class="line-left"></span><h2>Our Projects & Visions</h2><span class="line-right"></span>                   
                 <h1>ABOUT OUR STUDIO</h1>
             </div>
             <article>
@@ -97,6 +97,21 @@
                     <span>CLOUD WORKERS</span>
                 </li>
             </ul>
+        </section>
+        <section class="project">
+            <div class="intro">
+                <span class="line-left"></span><h2>Recognized By Everyone</h2><span class="line-right"></span>                   
+                <h1>OUR LATEST PROJECTS</h1>
+                <p>It is some systematized exhibition of the whale in his broad genera, that I would now fain put before you. Yet is it now
+                    <br/>
+                    easy task.The classification of the constituents of a chaos, nothing less is here essayed.
+                </p>
+            </div>
+            <!--todo add project preview-->
+            <div class="pro-preview">
+                some project preview photos in here
+            </div>
+            <button type="button"><a href="#">LOAD MORE PROJECTS</a></button>
         </section>
         <script src="main.js"></script>
     </body>
