--- a/BootstrapLearning/BackOffice/index.html
+++ b/BootstrapLearning/BackOffice/index.html
@@ -92,7 +92,16 @@
 
     <!--Main Page-->
     <div class="main-page">
-      
+      <!--Bread Nav-->
+      <ol class="breadcrumb">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Library</a></li>
+        <li class="active">Data</li>
+      </ol>
+      <div class="row">
+        <div class="col-md-6 col-lg-3"></div>
+        <div class="col-md-6 col-lg-3"></div>        
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
