Chat Slider finished

--- a/JavaScripts30/SPA/index.html
+++ b/JavaScripts30/SPA/index.html
@@ -10,6 +10,7 @@
         <div id="spa">
             <div class="spa-slider"></div>
         </div>
+        <script src="jquery-2.2.1.min.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
