--- a/JavaScripts30/SPA/spa.html
+++ b/JavaScripts30/SPA/spa.html
@@ -4,13 +4,15 @@
         <title>SPA</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet">
+        <link href="css/spa.css" rel="stylesheet">
+        <link href="css/spa.shell.css" rel="stylesheet">        
+        <script src="js/jquery-2.2.1.min.js"></script>
+        <script src="js/spa.js"></script>
+        <script src="js/spa.shell.js"></script>        
     </head>
     <body>
         <div id="spa">
             <div class="spa-slider"></div>
         </div>
-        <script src="jquery-2.2.1.min.js"></script>
-        <script src="main.js"></script>
     </body>
 </html>
