--- a/JavaScripts30/SPA/spa.html
+++ b/JavaScripts30/SPA/spa.html
@@ -8,11 +8,14 @@
         <link href="css/spa.shell.css" rel="stylesheet">        
         <script src="js/jquery-2.2.1.min.js"></script>
         <script src="js/spa.js"></script>
-        <script src="js/spa.shell.js"></script>        
+        <script src="js/spa.shell.js"></script>                        
+        <script>
+            $(document).ready(function() {
+                spa.initModule($('#spa'));
+            });
+        </script>
     </head>
     <body>
-        <div id="spa">
-            <div class="spa-slider"></div>
-        </div>
+        <div id="spa"></div>
     </body>
 </html>
