--- a/JavaScripts30/SPA/spa.html
+++ b/JavaScripts30/SPA/spa.html
@@ -7,6 +7,7 @@
         <link href="css/spa.css" rel="stylesheet">
         <link href="css/spa.shell.css" rel="stylesheet">        
         <script src="js/jquery-2.2.1.min.js"></script>
+        <script src="js/jquery.uriAnchor.js"></script>        
         <script src="js/spa.js"></script>
         <script src="js/spa.shell.js"></script>                        
         <script>
