--- a/JavaScripts30/SPA/spa.html
+++ b/JavaScripts30/SPA/spa.html
@@ -5,11 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/spa.css" rel="stylesheet">
+        <link href="css/spa.chat.css" rel="stylesheet">        
         <link href="css/spa.shell.css" rel="stylesheet">        
         <script src="js/jquery-2.2.1.min.js"></script>
         <script src="js/jquery.uriAnchor.js"></script>        
         <script src="js/spa.js"></script>
+        <script src="js/spa.util.js"></script>
+        <script src="js/spa.model.js"></script>        
         <script src="js/spa.shell.js"></script>                        
+        <script src="js/spa.chat.js"></script>        
         <script>
             $(document).ready(function() {
                 spa.initModule($('#spa'));
