--- a/HTML5/Clock/index.html
+++ b/HTML5/Clock/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <canvas id="canvas" width="600" height="600"></canvas>
-        <script src="main.js"></script>
+        <!--<script src="main.js"></script>-->
+        <script src="Dial.js"></script>
+        
     </body>
 </html>
