fixed clock running problem

--- a/JavaScripts30/Clock/index.html
+++ b/JavaScripts30/Clock/index.html
@@ -27,6 +27,7 @@
                 transform: rotate(90deg);
                 transform-origin: 100%;
                 display: inline-block;
+                transition: all 0.05s;
             }
             #secNiddle {
                 width: 140px;
