come back to IFE

--- a/IFE-Task/task-2-5.html
+++ b/IFE-Task/task-2-5.html
@@ -16,6 +16,8 @@
     <legend>请选择查看的城市：</legend>
     <select id="city-select">
       <option>北京</option>
+      <option>上海</option>
+      <option>广州</option>      
     </select>
   </fieldset>
 
